--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       dockerfile: Dockerfile
       args:
         - DEV=true
-    command: celery -A backend worker -l INFO
+    command: celery -A config worker -l INFO
     volumes:
       - .:/app
     depends_on:
