--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,2 @@
-# Import production dependencies
 -r requirements.txt
-
-# Type checking
-django-stubs==5.1.3
-djangorestframework-stubs==3.14.0
+django-stubs
