Add Alchemy client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - MORALIS_API_KEY_DEVELOP=${MORALIS_API_KEY_DEVELOP}
       - COINMARKETCAP_API_KEY=${COINMARKETCAP_API_KEY}
       - COINGECKO_API_KEY=${COINGECKO_API_KEY}
+      - ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
 
   db:
     image: postgres:16
@@ -62,6 +63,7 @@ services:
       - MORALIS_API_KEY_DEVELOP=${MORALIS_API_KEY_DEVELOP}
       - COINMARKETCAP_API_KEY=${COINMARKETCAP_API_KEY}
       - COINGECKO_API_KEY=${COINGECKO_API_KEY}
+      - ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
 
   celery-beat:
     build:
@@ -84,6 +86,7 @@ services:
       - MORALIS_API_KEY_DEVELOP=${MORALIS_API_KEY_DEVELOP}
       - COINMARKETCAP_API_KEY=${COINMARKETCAP_API_KEY}
       - COINGECKO_API_KEY=${COINGECKO_API_KEY}
+      - ALCHEMY_API_KEY=${ALCHEMY_API_KEY}
 
 volumes:
   postgres_data:
